--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
     <link rel="stylesheet" href="./css/style.css"/>
     <link rel="stylesheet" href="./css/glitch.css"/>
-    <link rel="stylesheet" href="./css/header_footer.css"/>
+    <link rel="stylesheet" href="./css/header-footer.css"/>
     <link rel="stylesheet" href="./css/index.css"/>
 
     <link rel="icon" type="image/png" href="./images/logo_krhacken_r.ico" />
@@ -28,8 +28,8 @@
     <header>
         <a href="./index.html"><img src="./images/logo_krhacken_invert2.webp" alt="Logo Krhackademy" width="40" height="40"/></a>
         <h1 class="title"> <a href="./index.html">Kr[HACK]ademy</a> </h1>
-        <nav class="nav_bar" aria-label="Navigation principale">
-            <ul id="nav_links">
+        <nav class="nav-bar" aria-label="Navigation principale">
+            <ul id="nav-links">
                 <li class="active"><a href="./index.html">ACCUEIL</a></li>
                 <li><a href="./lessons.html">LEÇONS</a></li>
                 <li><a href="./challenges.html">CHALLENGES</a></li>
@@ -42,58 +42,58 @@
     <main class="main">
         
         <section class="intro">
-            <div class="text_intro">
-                <h2>Apprends la cybersécurité <br><span id="dynamic_text" class="glitch" data-text="en ligne">en ligne</span></br></h2>
+            <div class="text-intro">
+                <h2>Apprends la cybersécurité <br><span id="dynamic-text" class="glitch" data-text="en ligne">en ligne</span></br></h2>
                 <h3>Créé par le <em>Kr[HACK]en</em> (club de cybersécurité de l'ESISAR) pour accompagner les étudiants dans leur apprentissage de débutant à expert</h3>
             </div>
-            <div class="image_intro">
+            <div class="image-intro">
                 <img src="./images/krhacken_laurier.webp" alt="Logo du club Krhacken avec des lauriers"/>
             </div>
         </section>
 
         <section class="pres">
-            <div class="text_pres">
+            <div class="text-pres">
                 <h2>Apprendre <span class="hyphen">-</span> Pratiquer <span class="hyphen">-</span> Réussir</h2>
             </div>
-            <div class="box_container">
-                <a href="./lessons.html" class="box_pres_link">
-                    <div class="box_pres">
+            <div class="box-container">
+                <a href="./lessons.html" class="box-pres-link">
+                    <div class="box-pres">
                         <img src="./images/lessons.webp" alt="Icône représentant un livre ouvert pour la section Leçons."/>
-                        <div class="box_info">
+                        <div class="box-info">
                             <h4>Leçons</h4>
                             <p>Découvrez les bases fondamentales et maîtrisez les concepts clés de la cybersécurité avec une approche structurée et complète.</p>
                             <ul>
-                                <li><i class="far fa-check-square checkbox_icon" aria-hidden="true"></i>Théorie Solide</li>
-                                <li><i class="far fa-check-square checkbox_icon" aria-hidden="true"></i>Apprentissage Progressif</li>
-                                <li><i class="far fa-check-square checkbox_icon" aria-hidden="true"></i>Ressources Claires</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Théorie Solide</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Apprentissage Progressif</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Ressources Claires</li>
                             </ul>
                         </div>
                     </div>
                 </a>
-                <a href="./challenges.html" class="box_pres_link">
-                    <div class="box_pres">
+                <a href="./challenges.html" class="box-pres-link">
+                    <div class="box-pres">
                         <img src="./images/challenges.webp" alt="Icône représentant un drapeau pour la section Challenges."/>
-                        <div class="box_info">
+                        <div class="box-info">
                             <h4>Challenges</h4>
                             <p>Affrontez des défis concrets pour aiguiser vos compétences pratiques et développer vos compétences en cybersécurité.</p>
                             <ul>
-                                <li><i class="far fa-check-square checkbox_icon" aria-hidden="true"></i>Mise en pratique</li>
-                                <li><i class="far fa-check-square checkbox_icon" aria-hidden="true"></i>Scénarios Réels</li>
-                                <li><i class="far fa-check-square checkbox_icon" aria-hidden="true"></i>Compétition Amicale</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Mise en pratique</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Scénarios Réels</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Compétition Amicale</li>
                             </ul>
                         </div>
                     </div>
                 </a>
-                <a href="./scenarios.html" class="box_pres_link">
-                    <div class="box_pres">
-                        <img src="./images/scenarios.webp" alt="Icône représentant un cheminement pour la section Scénarios."/>
-                        <div class="box_info">
+                <a href="./scenarios.html" class="box-pres-link">
+                    <div class="box-pres">
+                        <img src="./images/scenarios.webp" alt="Icône représentant des engrenages pour la section Scénarios."/>
+                        <div class="box-info">
                             <h4>Scénarios</h4>
                             <p>Validez vos aptitudes pratiques et vos acquis théoriques en suivant nos scénarios guidés pour completer votre profil.</p>
                             <ul>
-                                <li><i class="far fa-check-square checkbox_icon" aria-hidden="true"></i>Cyber-attaques guidées</li>
-                                <li><i class="far fa-check-square checkbox_icon" aria-hidden="true"></i>Découverte d'outils puissants</li>
-                                <li><i class="far fa-check-square checkbox_icon" aria-hidden="true"></i>Guidés et réalistes</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Cyber-attaques guidées</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Découverte d'outils puissants</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Guidés et réalistes</li>
                             </ul>
                         </div>
                     </div>
@@ -102,50 +102,50 @@
         </section>
 
         <section class="news">
-            <div class="news_info">
+            <div class="news-info">
                 <h2>Nouveautés et Évènements</h2>
-                <a href="#" class="news_card event">
-                    <div class="card_image_container">
+                <a href="#" class="news-card event">
+                    <div class="card-image-container">
                         <img src="./images/tmp4.jpg" alt="Affiche de l'évènement Session 0" onerror="this.style.display='none';">
-                        <div class="card_overlay">
+                        <div class="card-overlay">
                             <div>
-                                <div class="card_title">Session 0</div>
-                                <div class="card_subtitle">le 1 septembre à 5h30 en B652</div>
+                                <div class="card-title">Session 0</div>
+                                <div class="card-subtitle">le 1 septembre à 5h30 en B652</div>
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="news_grid">
-                <a href="#" class="news_card">
-                    <div class="card_image_container">
+            <div class="news-grid">
+                <a href="#" class="news-card">
+                    <div class="card-image-container">
                         <img src="./images/tmp1.png" alt="Nouveauté sur les Cyber-attaques" onerror="this.style.display='none';">
-                        <div class="card_overlay">
+                        <div class="card-overlay">
                             <div>
-                                <div class="card_title">Cyber-attaques</div>
-                                <div class="card_subtitle">Découvrez les techniques courantes d'attaques et comment les contrer.</div>
+                                <div class="card-title">Cyber-attaques</div>
+                                <div class="card-subtitle">Découvrez les techniques courantes d'attaques et comment les contrer.</div>
                             </div>
                         </div>
                     </div>
                 </a>
-                <a href="#" class="news_card">
-                    <div class="card_image_container">
-                        <img src="./images/tmp2.png" alt="Nouveauté sur le Forensics" onerror="this.style.display='none';">
-                        <div class="card_overlay">
+                <a href="#" class="news-card">
+                    <div class="card-image-container">
+                        <img src="./images/tmp2.png" alt="Nouveauté sur la Forensics" onerror="this.style.display='none';">
+                        <div class="card-overlay">
                             <div>
-                                <div class="card_title">Forensics</div>
-                                <div class="card_subtitle">Mettez vos compétences d'analyse forensique à l'épreuve.</div>
+                                <div class="card-title">Forensics</div>
+                                <div class="card-subtitle">Mettez vos compétences d'analyse forensique à l'épreuve.</div>
                             </div>
                         </div>
                     </div>
                 </a>
-                <a href="#" class="news_card">
-                    <div class="card_image_container">
+                <a href="#" class="news-card">
+                    <div class="card-image-container">
                         <img src="./images/tmp3.png" alt="Nouveauté sur la Sécurité Web" onerror="this.style.display='none';">
-                        <div class="card_overlay">
+                        <div class="card-overlay">
                             <div>
-                                <div class="card_title">Sécurité Web</div>
-                                <div class="card_subtitle">Construisez une application web sécurisée de A à Z.</div>
+                                <div class="card-title">Sécurité Web</div>
+                                <div class="card-subtitle">Construisez une application web sécurisée de A à Z.</div>
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
     <footer>
         <a href="https://krhacken.org" target="_blank" rel="noopener noreferrer"> <img src="images/logo.webp" alt="Logo du club Krhacken"> </a>
         <a href="https://esisar.grenoble-inp.fr" target="_blank" rel="noopener noreferrer"> <img src="images/logo_esisar.webp" alt="Logo de Grenoble-INP Esisar"> </a>
-        <p class="footer_legal">
+        <p class="footer-legal">
             L'ENSEMBLE DE CE SITE RELÈVE DE LA LÉGISLATION FRANÇAISE ET INTERNATIONALE SUR LE DROIT D'AUTEUR ET LA PROPRIÉTÉ INTELLECTUELLE. TOUS LES DROITS DE REPRODUCTION SONT RÉSERVÉS, Y COMPRIS POUR LES DOCUMENTS TÉLÉCHARGEABLES ET LES REPRÉSENTATIONS ICONOGRAPHIQUES ET PHOTOGRAPHIQUES. LA REPRODUCTION DE TOUT OU PARTIE DE CE SITE SUR UN SUPPORT ÉLECTRONIQUE QUEL QU'IL SOIT EST FORMELLEMENT INTERDITE SAUF AUTORISATION EXPRESSE DU DIRECTEUR DE LA PUBLICATION. CE SITE EST ÉDITÉ PAR Le club kr[HACK]en, Grenoble INP Esisar, 50 Rue Barthélémy de Laffemas, 26000 Valence, France.<br>
             EMAIL : <a href="mailto:contact@krhacken.org">contact@krhacken.org</a>
         </p>
