--- a/lessons/web-sql-easy/web-sql-easy.html
+++ b/lessons/web-sql-easy/web-sql-easy.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-    <main class="lesson-container" data-lesson-id="lecon-unique-id">
+    <main class="lesson-container" data-lesson-id="web-sql-easy">
         <article class="lesson-content">
             
             <header class="lesson-header">
