--- a/index.html
+++ b/index.html
@@ -52,16 +52,18 @@
         </section>
 
         <section class="pres">
-            <div class="text-pres">
-                <h2>Apprendre <span class="hyphen">-</span> Pratiquer <span class="hyphen">-</span> Réussir</h2>
-            </div>
+            <h2>Apprendre <span class="hyphen">&mdash;</span> Pratiquer <span class="hyphen">&mdash;</span> Réussir</h2>
             <div class="box-container">
-                <a href="./lessons.html" class="box-pres-link">
-                    <div class="box-pres">
-                        <img src="./images/lessons.webp" alt="Icône représentant un livre ouvert pour la section Leçons."/>
+                <div class="box-pres">
+                    <div class="box-content-inner">
+                        <div class="box-header">
+                            <div class="box-icon-wrapper">
+                                <i class="fas fa-book-open box-icon"></i>
+                            </div>
+                            <h4>Leçons Structurées</h4>
+                        </div>
                         <div class="box-info">
-                            <h4>Leçons</h4>
-                            <p>Découvrez les bases fondamentales et maîtrisez les concepts clés de la cybersécurité avec une approche structurée et complète.</p>
+                            <p>Découvrez les bases fondamentales et maîtrisez les concepts clés avec une approche structurée et complète.</p>
                             <ul>
                                 <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Théorie Solide</li>
                                 <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Apprentissage Progressif</li>
@@ -69,13 +71,17 @@
                             </ul>
                         </div>
                     </div>
-                </a>
-                <a href="./challenges.html" class="box-pres-link">
-                    <div class="box-pres">
-                        <img src="./images/challenges.webp" alt="Icône représentant un drapeau pour la section Challenges."/>
+                </div>
+                <div class="box-pres">
+                    <div class="box-content-inner">
+                        <div class="box-header">
+                            <div class="box-icon-wrapper">
+                                <i class="fas fa-flag box-icon"></i>
+                            </div>
+                            <h4>Challenges Pratiques</h4>
+                        </div>
                         <div class="box-info">
-                            <h4>Challenges</h4>
-                            <p>Affrontez des défis concrets pour aiguiser vos compétences pratiques et développer vos compétences en cybersécurité.</p>
+                            <p>Affrontez des défis concrets pour aiguiser vos compétences pratiques et vous mesurer à des scénarios réels.</p>
                             <ul>
                                 <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Mise en pratique</li>
                                 <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Scénarios Réels</li>
@@ -83,71 +89,69 @@
                             </ul>
                         </div>
                     </div>
-                </a>
-                <a href="./scenarios.html" class="box-pres-link">
-                    <div class="box-pres">
-                        <img src="./images/scenarios.webp" alt="Icône représentant des engrenages pour la section Scénarios."/>
+                </div>
+                <div class="box-pres">
+                    <div class="box-content-inner">
+                        <div class="box-header">
+                            <div class="box-icon-wrapper">
+                                <i class="fas fa-cogs box-icon"></i>
+                            </div>
+                            <h4>Scénarios Guidés</h4>
+                        </div>
                         <div class="box-info">
-                            <h4>Scénarios</h4>
-                            <p>Validez vos aptitudes pratiques et vos acquis théoriques en suivant nos scénarios guidés pour completer votre profil.</p>
+                            <p>Validez vos acquis en suivant nos scénarios guidés, découvrez des outils puissants et complétez votre profil.</p>
                             <ul>
                                 <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Cyber-attaques guidées</li>
-                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Découverte d'outils puissants</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Découverte d'outils</li>
                                 <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Guidés et réalistes</li>
                             </ul>
                         </div>
                     </div>
-                </a>
+                </div>
             </div>
         </section>
 
         <section class="news">
-            <div class="news-info">
-                <h2>Nouveautés et Évènements</h2>
-                <a href="#" class="news-card event">
-                    <div class="card-image-container">
-                        <img src="./images/tmp4.jpg" alt="Affiche de l'évènement Session 0" onerror="this.style.display='none';">
-                        <div class="card-overlay">
-                            <div>
-                                <div class="card-title">Session 0</div>
-                                <div class="card-subtitle">le 1 septembre à 5h30 en B652</div>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
+            <h2>Nouveautés et Évènements</h2>
             <div class="news-grid">
                 <a href="#" class="news-card">
                     <div class="card-image-container">
+                        <img src="./images/tmp4.jpg" alt="Affiche de l'évènement Session 0" onerror="this.style.display='none';">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-tag">Évènement</span>
+                        <h4 class="card-title">Session 0</h4>
+                        <p class="card-subtitle">Rejoignez-nous le 1 septembre à 5h30 en B652.</p>
+                    </div>
+                </a>
+                <a href="#" class="news-card">
+                    <div class="card-image-container">
                         <img src="./images/tmp1.png" alt="Nouveauté sur les Cyber-attaques" onerror="this.style.display='none';">
-                        <div class="card-overlay">
-                            <div>
-                                <div class="card-title">Cyber-attaques</div>
-                                <div class="card-subtitle">Découvrez les techniques courantes d'attaques et comment les contrer.</div>
-                            </div>
-                        </div>
+                    </div>
+                    <div class="card-content">
+                        <span class="card-tag">Nouveauté</span>
+                        <h4 class="card-title">Cyber-attaques</h4>
+                        <p class="card-subtitle">Découvrez les techniques courantes et comment les contrer.</p>
                     </div>
                 </a>
                 <a href="#" class="news-card">
                     <div class="card-image-container">
                         <img src="./images/tmp2.png" alt="Nouveauté sur la Forensics" onerror="this.style.display='none';">
-                        <div class="card-overlay">
-                            <div>
-                                <div class="card-title">Forensics</div>
-                                <div class="card-subtitle">Mettez vos compétences d'analyse forensique à l'épreuve.</div>
-                            </div>
-                        </div>
+                    </div>
+                    <div class="card-content">
+                        <span class="card-tag">Nouveauté</span>
+                        <h4 class="card-title">Forensics</h4>
+                        <p class="card-subtitle">Mettez vos compétences d'analyse forensique à l'épreuve.</p>
                     </div>
                 </a>
                 <a href="#" class="news-card">
                     <div class="card-image-container">
                         <img src="./images/tmp3.png" alt="Nouveauté sur la Sécurité Web" onerror="this.style.display='none';">
-                        <div class="card-overlay">
-                            <div>
-                                <div class="card-title">Sécurité Web</div>
-                                <div class="card-subtitle">Construisez une application web sécurisée de A à Z.</div>
-                            </div>
-                        </div>
+                    </div>
+                    <div class="card-content">
+                        <span class="card-tag">Nouveauté</span>
+                        <h4 class="card-title">Sécurité Web</h4>
+                        <p class="card-subtitle">Construisez une application web sécurisée de A à Z.</p>
                     </div>
                 </a>
             </div>
