--- a/index.html
+++ b/index.html
@@ -52,76 +52,82 @@
         </section>
 
         <section class="pres">
-            <h2>Apprendre <span class="hyphen">&mdash;</span> Pratiquer <span class="hyphen">&mdash;</span> Réussir</h2>
-            <div class="box-container">
-                <div class="box-pres">
-                    <div class="box-content-inner">
-                        <div class="box-header">
-                            <div class="box-icon-wrapper">
-                                <i class="fas fa-book-open box-icon"></i>
-                            </div>
-                            <h4>Leçons Structurées</h4>
-                        </div>
-                        <div class="box-info">
-                            <p>Découvrez les bases fondamentales et maîtrisez les concepts clés avec une approche structurée et complète.</p>
-                            <ul>
-                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Théorie Solide</li>
-                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Apprentissage Progressif</li>
-                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Ressources Claires</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="box-pres">
-                    <div class="box-content-inner">
-                        <div class="box-header">
-                            <div class="box-icon-wrapper">
-                                <i class="fas fa-flag box-icon"></i>
-                            </div>
-                            <h4>Challenges Pratiques</h4>
-                        </div>
-                        <div class="box-info">
-                            <p>Affrontez des défis concrets pour aiguiser vos compétences pratiques et vous mesurer à des scénarios réels.</p>
-                            <ul>
-                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Mise en pratique</li>
-                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Scénarios Réels</li>
-                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Compétition Amicale</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="box-pres">
-                    <div class="box-content-inner">
-                        <div class="box-header">
-                            <div class="box-icon-wrapper">
-                                <i class="fas fa-cogs box-icon"></i>
-                            </div>
-                            <h4>Scénarios Guidés</h4>
-                        </div>
-                        <div class="box-info">
-                            <p>Validez vos acquis en suivant nos scénarios guidés, découvrez des outils puissants et complétez votre profil.</p>
-                            <ul>
-                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Cyber-attaques guidées</li>
-                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Découverte d'outils</li>
-                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Guidés et réalistes</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        	<h2>Apprendre <span class="hyphen">&mdash;</span> Pratiquer <span class="hyphen">&mdash;</span> Réussir</h2>
+        	<div class="box-container">
+        		<a href="./lessons.html" class="box-link">
+        			<div class="box-pres">
+        				<div class="box-content-inner">
+        					<div class="box-header">
+        						<div class="box-icon-wrapper">
+        							<i class="fas fa-book-open box-icon"></i>
+        						</div>
+        						<h4>Leçons</h4>
+        					</div>
+        					<div class="box-info">
+        						<p>Découvrez les bases fondamentales et maîtrisez les concepts clés avec une approche structurée et complète.</p>
+        						<ul>
+        							<li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Théorie Solide</li>
+        							<li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Apprentissage Progressif</li>
+        							<li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Ressources Claires</li>
+        						</ul>
+        					</div>
+        				</div>
+        			</div>
+        		</a>
+        		<a href="./challenges.html" class="box-link">
+        			<div class="box-pres">
+        				<div class="box-content-inner">
+        					<div class="box-header">
+        						<div class="box-icon-wrapper">
+        							<i class="fas fa-flag box-icon"></i>
+        						</div>
+        						<h4>Challenges</h4>
+        					</div>
+        					<div class="box-info">
+        						<p>Affrontez des défis concrets pour aiguiser vos compétences pratiques et vous mesurer à des scénarios réels.</p>
+        						<ul>
+        							<li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Mise en pratique</li>
+        							<li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Scénarios Réels</li>
+        							<li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Compétition Amicale</li>
+        						</ul>
+        					</div>
+        				</div>
+        			</div>
+        		</a>
+        		<a href="./scenarios.html" class="box-link">
+        			<div class="box-pres">
+        				<div class="box-content-inner">
+        					<div class="box-header">
+        						<div class="box-icon-wrapper">
+        							<i class="fas fa-cogs box-icon"></i>
+        						</div>
+        						<h4>Scénarios</h4>
+        					</div>
+        					<div class="box-info">
+        						<p>Validez vos acquis en suivant nos scénarios guidés, découvrez des outils puissants et complétez votre profil.</p>
+        						<ul>
+        							<li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Cyber-attaques guidées</li>
+        							<li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Découverte d'outils</li>
+        							<li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Guidés et réalistes</li>
+        						</ul>
+        					</div>
+        				</div>
+        			</div>
+        		</a>
+        	</div>
         </section>
-
+        
         <section class="news">
             <h2>Nouveautés et Évènements</h2>
             <div class="news-grid">
-                <a href="#" class="news-card">
+                <a href="#" class="news-card featured">
                     <div class="card-image-container">
                         <img src="./images/tmp4.jpg" alt="Affiche de l'évènement Session 0" onerror="this.style.display='none';">
                     </div>
                     <div class="card-content">
                         <span class="card-tag">Évènement</span>
-                        <h4 class="card-title">Session 0</h4>
-                        <p class="card-subtitle">Rejoignez-nous le 1 septembre à 5h30 en B652.</p>
+                        <h4 class="card-title">Session 0 : Lancement de la saison</h4>
+                        <p class="card-subtitle">Rejoignez-nous pour le lancement de la nouvelle saison ! Présentation du club, des projets de l'année et premier atelier d'introduction. Rendez-vous le 1 septembre à 5h30 en B652.</p>
                     </div>
                 </a>
                 <a href="#" class="news-card">
