--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         </section>
         
         <section class="news">
-            <h2>Nouveautés et Évènements</h2>
-            <div class="news-grid">
+            <div class="news-header">
+                <h2>Nouveautés et Évènements</h2>
                 <a href="#" class="news-card featured">
                     <img src="./images/tmp4.jpg" alt="Affiche de l'évènement Session 0" onerror="this.style.display='none';">
                     <div class="card-content">
@@ -128,6 +128,9 @@
                         <p class="card-subtitle">Rejoignez-nous pour le lancement de la nouvelle saison ! Présentation du club, des projets de l'année et premier atelier d'introduction. Rendez-vous le 1 septembre à 5h30 en B652.</p>
                     </div>
                 </a>
+            </div>
+        
+            <div class="news-grid">
                 <a href="#" class="news-card">
                     <img src="./images/tmp1.png" alt="Nouveauté sur les Cyber-attaques" onerror="this.style.display='none';">
                     <div class="card-content">
