--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                     <img src="./images/tmp4.jpg" alt="Affiche de l'évènement Session 0" onerror="this.style.display='none';">
                     <div class="card-content">
                         <span class="card-tag">Évènement</span>
-                        <h4 class="card-title">Session 0 : Lancement de la saison</h4>
-                        <p class="card-subtitle">Rejoignez-nous pour le lancement de la nouvelle saison ! Présentation du club, des projets de l'année et premier atelier d'introduction. Rendez-vous le 1 septembre à 5h30 en B652.</p>
+                        <h4 class="card-title">Session 0</h4>
+                        <p class="card-subtitle">Rejoignez-nous le 1 septembre à 5h30 en B652.</p>
                     </div>
                 </a>
             </div>
